objects/MMPJ_TOPG_Competitor__c.object
<CustomObject>
    <description>Used for MMPJ TopGun app</description>
    <fields>
        <fullName>MMPJ_TOPG_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MMPJ TOPGUN</description>
        <label>Brand</label>
        <referenceTo>MMPJ_TOPG_Brand__c</referenceTo>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                </value>
                <value>
                    <fullName>Spirits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MMPJ TOPGUN</description>
        <label>Market</label>
        <referenceTo>MMPJ_TOPG_Market__c</referenceTo>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_MinutesOfMeeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Minute of Meeting</label>
        <referenceTo>MMPJ_TOPG_MinuteOfMeeting__c</referenceTo>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_ParentCompetitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Competitor</label>
        <referenceTo>MMPJ_TOPG_Competitor__c</referenceTo>
        <relationshipName>ChildCompetitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>MMPJ_TOPG_All_Competitors</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_TOPG_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>